--- a/src/TheWorkBook/Shared/NavMenu.razor
+++ b/src/TheWorkBook/Shared/NavMenu.razor
@@ -29,6 +29,11 @@
 				<span class="oi oi-list-rich" aria-hidden="true"></span> Listings
 			</NavLink>
 		</div>
+		<div class="nav-item px-3">
+			<NavLink class="nav-link" href="logintest">
+				<span class="oi oi-list-rich" aria-hidden="true"></span> Login Test
+			</NavLink>
+		</div>
 	</nav>
 </div>
 
