--- a/src/TheWorkBook/Pages/JobListing.razor
+++ b/src/TheWorkBook/Pages/JobListing.razor
@@ -7,7 +7,7 @@
 
     <div class="row bg-light mb-4">
         <div class="col-2">
-            <a href="/">
+            <a onclick="goBack()">
                 <i class="oi oi-chevron-left"></i>
             </a>
         </div>
