Created and wired up more screens.

--- a/src/TheWorkBook/Pages/Index.razor
+++ b/src/TheWorkBook/Pages/Index.razor
@@ -2,6 +2,7 @@
 
 @using TheWorkBook.Data
 @using TheWorkBook.Dto
+@inject GoBack GoBack
 @inject CategoryService CategoryService
 
 <h1>Choose Category</h1>
