--- a/src/TheWorkBook/Pages/JobEdit.razor
+++ b/src/TheWorkBook/Pages/JobEdit.razor
@@ -1,6 +1,4 @@
-﻿@page "/jobdetails/{Id:int}"
-
-@inject GoBack GoBack
+﻿@page "/jobedit/{Id:int}"
 
 <div class="row bg-light mb-5">
     <div class="col-2">
