--- a/src/TheWorkBook/Pages/PostJob.razor
+++ b/src/TheWorkBook/Pages/PostJob.razor
@@ -3,7 +3,7 @@
 
 <div class="row bg-light mb-5">
     <div class="col-2">
-        <a href="/joblisting/@this.CategoryId">
+        <a onclick="goBack()">
             <i class="oi oi-chevron-left"></i>
         </a>
     </div>
