--- a/src/TheWorkBook/Pages/PostProposal.razor
+++ b/src/TheWorkBook/Pages/PostProposal.razor
@@ -2,7 +2,7 @@
 
 <div class="row bg-light mb-5">
     <div class="col-2">
-        <a href="joblisting">
+        <a onclick="goBack()">
             <i class="oi oi-chevron-left"></i>
         </a>
     </div>
