Some work on new listing and improvements for toher screens.

--- a/src/TheWorkBook/Pages/Jobdetails.razor
+++ b/src/TheWorkBook/Pages/Jobdetails.razor
@@ -20,14 +20,7 @@
         <div class="row mb-4">
             <div class="col-12">
                 <label><b>Job Title</b></label>
-                @if (Text == "edit")
-                {
-                    <input class="form-control" value="MAUI Developer" />
-                }
-                else
-                {
-                    <div>MAUI Developer</div>
-                }
+                <div>@ListingDto.Title</div>
             </div>
         </div>
 
@@ -104,17 +97,10 @@
         <div class="row mb-4">
             <div class="col-12">
                 <label>
-                    <b>Amount</b>
+                    <b>Budget</b>
                 </label>
                 <div>
-                    @if (Text == "edit")
-                    {
-                        <input class="form-control" type="number" value="100" min="1" max="999" />
-                    }
-                    else
-                    {
-                        <div> €500</div>
-                    }
+                    <div>€@ListingDto.Budget</div>
                 </div>
             </div>
         </div>
@@ -125,30 +111,7 @@
                     <b>Job Description</b>
                 </label>
                 <div>
-                    @if (Text == "edit")
-                    {
-                        <textarea class="form-control" rows="5">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                                            when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                                            It has survived not only five centuries, but also the leap into electronic typesetting,
-                                            remaining essentially unchanged. 
-                                            It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-                                            and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                                        </textarea>
-                    }
-                    else
-                    {
-                        <div>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                            when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                            It has survived not only five centuries, but also the leap into electronic typesetting,
-                            remaining essentially unchanged.
-                            It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-                            and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                        </div>
-                    }
-
+                    @ListingDto.MainDescription
                 </div>
             </div>
         </div>
