Improvements to 'Create New Listing' functionality.

--- a/src/TheWorkBook/Pages/JobListing.razor
+++ b/src/TheWorkBook/Pages/JobListing.razor
@@ -15,7 +15,7 @@
             <h4>@_jobListingViewModel.SelectedCategory.CategoryName</h4>
         </div>
         <div class="col-2">
-            <a href="/postjob/@this.CategoryId" class="btn btn-primary tr-theme">
+            <a href="/postjobbegin/@this.CategoryId" class="btn btn-primary tr-theme">
                 <i class="oi oi-plus"></i>
             </a>
         </div>
