--- a/src/TheWorkBook/Shared/NavMenu.razor
+++ b/src/TheWorkBook/Shared/NavMenu.razor
@@ -22,7 +22,7 @@
             </NavLink>
         </div>*@
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="postjob">
+            <NavLink class="nav-link" href="postjobbegin">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Post Job
             </NavLink>
         </div>
