--- a/src/TheWorkBook/Pages/Jobdetails.razor
+++ b/src/TheWorkBook/Pages/Jobdetails.razor
@@ -25,83 +25,13 @@
         </div>
 
         <div class="row mb-4">
-            <div class="col-12">
-                <label><b>Hours Needed</b></label>
-                <div>
-                    @if (Text == "edit")
-                    {
-                        <select class="form-select">
-                            <option svalue="0">Less than 40 Hours/Week</option>
-                            <option value="1">Less than 30 Hours/Week</option>
-                            <option value="2">Less than 20 Hours/Week</option>
-                            <option value="3">Less than 10 Hours/Week</option>
-                        </select>
-                    }
-                    else
-                    {
-                        <div>Less than 40 Hours/Week</div>
-                    }
-
-                </div>
+            <div class="col-6">
+                <label><b>Cateogry</b></label>
+                <div>@ListingDto.CategoryName</div>
             </div>
-        </div>
-
-        <div class="row mb-4">
-
-            <div class="col-12">
-                <label>
-                    <b>Duration</b>
-                </label>
-                <div>
-                    @if (Text == "edit")
-                    {
-                        <select class="form-select" disabled="@(Text == "edit" ? false : true)">
-                            <option value="1">Less than 1 Month</option>
-                            <option value="2">1 to 3 Month</option>
-                            <option value="3">3 to 6 Month</option>
-                            <option value="4">More than 6 Month</option>
-                        </select>
-                    }
-                    else
-                    {
-                        <div>Less than 1 Month</div>
-                    }
-
-                </div>
-            </div>
-        </div>
-
-        <div class="row mb-4">
-            <div class="col-12">
-                <label>
-                    <b>Experience Level</b>
-                </label>
-                <div>
-                    @if (Text == "edit")
-                    {
-                        <select class="form-select" disabled="@(Text == "edit" ? false : true)">
-                            <option value="1">Beginner</option>
-                            <option value="2">Intermediate</option>
-                            <option value="3">Expert</option>
-                        </select>
-                    }
-                    else
-                    {
-                        <div>Intermediate</div>
-                    }
-
-                </div>
-            </div>
-        </div>
-
-        <div class="row mb-4">
-            <div class="col-12">
-                <label>
-                    <b>Budget</b>
-                </label>
-                <div>
-                    <div>€@ListingDto.Budget</div>
-                </div>
+            <div class="col-6">
+                <label><b>Location</b></label>
+                <div>@ListingDto.LocationName</div>
             </div>
         </div>
 
@@ -116,58 +46,110 @@
             </div>
         </div>
 
-        @if (Text == "edit")
-        {
-            <div class="row my-5">
-                <div class="col-12 text-center">
-                    <button class="btn btn-outline-primary" @onclick="UpdateJobDetails">Update Job</button>
+        @*<div class="row mb-4">
+        <div class="col-12">
+        <label><b>Hours Needed</b></label>
+        <div>
+        <div>Less than 40 Hours/Week</div>
+        </div>
+        </div>
+        </div>
+
+        <div class="row mb-4">
+
+        <div class="col-12">
+        <label>
+        <b>Duration</b>
+        </label>
+        <div>
+        <div>Less than 1 Month</div>
+        </div>
+        </div>
+        </div>
+
+        <div class="row mb-4">
+        <div class="col-12">
+        <label>
+        <b>Experience Level</b>
+        </label>
+        <div>
+        <div>Intermediate</div>
+        </div>
+        </div>
+        </div>*@
+
+        <div class="row mb-4">
+            <div class="col-6">
+                <label>
+                    <b>Budget</b>
+                </label>
+                <div>
+                    <div>€@ListingDto.BudgetText</div>
                 </div>
             </div>
+            <div class="col-6">
+                <label>
+                    <b>Posted</b>
+                </label>
+                <div>
+                    @ListingDto.AdvertAge
+                </div>
+            </div>
+        </div>
+
+
+        @*@if (Text == "edit")
+        {
+        <div class="row my-5">
+        <div class="col-12 text-center">
+        <button class="btn btn-outline-primary" @onclick="UpdateJobDetails">Update Job</button>
+        </div>
+        </div>
         }
         else
         {
-            <div class="row my-5">
-                <div class="col-12 text-center">
-                    <button class="btn btn-outline-primary tr-theme" @onclick="GoToSubmitProposal">Submit Proposal</button>
-                </div>
-            </div>
-        }
+        <div class="row my-5">
+        <div class="col-12 text-center">
+        <button class="btn btn-outline-primary tr-theme" @onclick="GoToSubmitProposal">Submit Proposal</button>
+        </div>
+        </div>
+        }*@
     </div>
     <hr />
 
-    <h4 class="text-center">
-        Comments about this task
+    @*  <h4 class="text-center">
+    Comments about this task
     </h4>
 
     <p class="mt-4">
-        Comment below for more details and remember that for your safety,
-        not to share personal information e.g. email and phone numbers.
+    Comment below for more details and remember that for your safety,
+    not to share personal information e.g. email and phone numbers.
     </p>
 
     <h5 class="text-center"><b>To join the conversation</b></h5>
 
     <div class="text-center mb-4">
-        <a class="btn btn-outline-primary tr-theme" href="/logintest">Sign In</a>
-    </div>
+    <a class="btn btn-outline-primary tr-theme" href="/logintest">Sign In</a>
+    </div>*@
 
 
     @*chat bubble - start*@
-    <div class="card bg-sohbet border-0 m-0 p-0" style="height: 100vh;">
-        <div id="sohbet" class="card border-0 m-0 p-0 position-relative bg-transparent" style="overflow-y: auto; height: 100vh;">
+    @*<div class="card bg-sohbet border-0 m-0 p-0" style="height: 100vh;">
+    <div id="sohbet" class="card border-0 m-0 p-0 position-relative bg-transparent" style="overflow-y: auto; height: 100vh;">
 
-            <div class="balon1 p-2 m-0 position-relative" data-is="You - 3:20 pm">
+    <div class="balon1 p-2 m-0 position-relative" data-is="You - 3:20 pm">
 
-                <a class="float-end"> Hey there! What's up? </a>
+    <a class="float-end"> Hey there! What's up? </a>
 
-            </div>
-
-            <div class="balon2 p-2 m-0 position-relative" data-is="Yusuf - 3:22 pm">
-
-                <a class="float-start sohbet2"> Checking out iPhone 12 you know.. </a>
-
-            </div>
-        </div>
     </div>
+
+    <div class="balon2 p-2 m-0 position-relative" data-is="Poster - 3:22 pm">
+
+    <a class="float-start sohbet2"> Checking out iPhone 12 you know.. </a>
+
+    </div>
+    </div>
+    </div>*@
     @*chat bubble - start*@
 </div>
 
