Wired up the location filter on listings/search screen.

--- a/src/TheWorkBook/Pages/JobListing.razor
+++ b/src/TheWorkBook/Pages/JobListing.razor
@@ -65,7 +65,7 @@
                     <label><b class="">Base Location</b></label>
 
                     <RadzenDropDown AllowClear="true" AllowFiltering="true" FilterCaseSensitivity="Radzen.FilterCaseSensitivity.CaseInsensitive"
-                                @bind-Value="multipleValues" Multiple="true" Placeholder="Select..." Data="_jobListingViewModel.LocationList" TextProperty="LocationName" ValueProperty="LocationId"
+                                @bind-Value="selectedLocations" Multiple="true" Placeholder="Select..." Data="_jobListingViewModel.LocationList" TextProperty="LocationName" ValueProperty="LocationId"
                                 Class="w-100" />
                 </div>
             </div>
