Improve format of budget field.

--- a/src/TheWorkBook/Pages/PostJob.razor
+++ b/src/TheWorkBook/Pages/PostJob.razor
@@ -121,7 +121,7 @@
                     Budget Amount €
                 </label>
                 <div class="col-6">
-                    <input class="form-control" type="number" placeholder="Budget" min="1" max="9999" @bind-value="@viewModel.EditListingDto.Budget" />
+                    <input class="form-control" type="number" placeholder="Budget" min="1" max="9999" @bind-value="@viewModel.EditListingDto.BudgetText" />
                 </div>
             </div>
         </div>
