Users can now remove/deactivate listings.

--- a/src/TheWorkBook/Pages/Jobdetails.razor
+++ b/src/TheWorkBook/Pages/Jobdetails.razor
@@ -46,6 +46,17 @@
             </div>
         </div>
 
+         <div class="row mb-4">
+            <div class="col-12">
+                <label>
+                    <b>Contact</b>
+                </label>
+                <div>
+                    @_listingDto.Telephone
+                </div>
+            </div>
+        </div>
+
         @*<div class="row mb-4">
         <div class="col-12">
         <label><b>Hours Needed</b></label>
