Some tidy up and light refactoring.

--- a/src/TheWorkBook/Pages/ProposalList.razor
+++ b/src/TheWorkBook/Pages/ProposalList.razor
@@ -20,7 +20,7 @@
         {
             @*Item 1 - start*@
             <div>
-                <h4 class="">Applicant Name</h4>
+                <h4 class="">Joseph Bloggs</h4>
                 <div class="row">
 
                     <div class="col-6 ">
@@ -48,8 +48,7 @@
                 </div>
 
                 <p class="mt-4">
-                    Expert in .NET MAUI Blazor with API integration.
-                    Applicant have worked on user interfaces as well.
+                    Expert in Garden Fencing
                 </p>
 
                 <div class="row">
@@ -58,7 +57,7 @@
                             Payment:
                         </label>
                         <span>
-                            €200
+                            €1400
                         </span>
                     </div>
 
